Fix toolbar spacing to match with guidelines

--- a/src/components/mdToolbar/mdToolbar.scss
+++ b/src/components/mdToolbar/mdToolbar.scss
@@ -24,7 +24,7 @@
 
     .md-toolbar-container:nth-child(2) {
       .md-title:first-child {
-        margin-left: 72px;
+        margin-left: 64px;
       }
     }
   }
@@ -37,12 +37,12 @@
     align-self: flex-start;
 
     > .md-button:first-child {
-      margin-right: 24px;
+      margin-right: 16px;
     }
   }
 
   > .md-button:first-child {
-    margin-right: 24px;
+    margin-right: 16px;
   }
 
   .md-title {
